# Discrete_Mathematics_Labs_2024-2025

./: README.md
sem_1/lab_1/: report.docx
sem_1/lab_1/set_calculator/: CMakeLists.txt  conditional.cpp  conditional.h  conditional.ui  editsets.cpp  editsets.h  editsets.ui  inputelements.cpp  inputelements.h  inputelements.ui  main.cpp  setcalculator.cpp  setcalculator.h  setcalculator.ui
sem_1/lab_2/: main.py  report.docx
sem_1/lab_3/: main.py  report.docx
sem_1/lab_4/: main.py  report.docx
sem_2/lab_1/: main.cpp
sem_2/lab_2/: main.py
sem_2/lab_3/: a.out  g41.txt  main.cpp  main.py  test.txt
sem_2/lab_4/: main.py
